--- a/startpage.html
+++ b/startpage.html
@@ -2,19 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>WebSockets - Simple chat</title>
+    <title>WebSockets - test</title>
     <style>
     * { font-family:tahoma; font-size:12px; padding:0px;margin:0px;}
     p { line-height:18px; }
-    div { width:800px; margin-left:auto; margin-right:auto;}
+    div { width:1000px; margin-left:auto; margin-right:auto;}
     #content { padding:5px; background:#ddd; border-radius:5px;
         overflow-y: scroll; border:1px solid #CCC;
-        margin-top:10px; height: 600px; }
+        margin-top:10px; height: 800px; }
     #status { width:88px;display:block;float:left;margin-top:15px; }
-    #elem { width:88px;display:block;float:left;margin-top:15px; }
+    #elem { width:150px;display:block;float:left;margin-top:15px;}
   </style>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
-      <script src="./frontend.js" defer></script>
+      <script src="./test.js" defer></script>
   </head>
   <body>
     <div id="content"></div>
