--- a/startpage.html
+++ b/startpage.html
@@ -13,13 +13,14 @@
     #status { width:88px;display:block;float:left;margin-top:15px; }
     #elem { width:150px;display:block;float:left;margin-top:15px;}
   </style>
-      <script src="./test.js" defer></script>
+      <script src="./test.js" type="module" defer></script>
   </head>
   <body>
     <div id="content"></div>
     <div>
       <span id="status">Connecting...</span>
-      <input id="elem" type="button" value="Start battle" />
+      <input id="btn_startbattle" type="button" value="Start battle" />
+      <input id="btn_randomship" type="button" value="Randomize ships" />
     </div>
 
   </body>
